change path logo image

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   <!--Title and favicon-->
   <title> Airbnb: Holiday Rentals, Cabins,Beach Houses, Unique Homes & ... </title>
-  <link rel="icon" type="image/x-icon" href="\images\airbnb.svg">
+  <link rel="icon" type="image/x-icon" href="\Airbnb\images\airbnb.svg">
   </head>
 
 <body>
@@ -34,7 +34,7 @@
       <nav class="navbar navbar-expand-xxl navbar navbar-dark bg-dark">
         <div class="col-md-4 logo-title">
           <a class="navbar-brand" href="#">
-            <img src="\images\airbnb.svg" width="30" height="30" alt="Logo airbnb">
+            <img src="\Airbnb\images\airbnb.svg" width="30" height="30" alt="Logo airbnb">
             <!-- text -->
             airbnb
           </a>
