--- a/index.html
+++ b/index.html
@@ -58,12 +58,12 @@
               <a class="nav-link host" href="#">Become a host</a>
             </li>
             <li class="nav-item">
-              <img src="\images\language_icon.svg" class="language-icon" alt="Language">
+              <img src="\Airbnb\images\language_icon.svg" class="language-icon" alt="Language">
             </li>
             <li class="nav-item">
               <button type="button" class="menu-profile">
-                <img src="\images\menu_black.svg" class="menu" alt="Menu">
-                <img src="\images\account_black.svg" class="profile" alt="Profile">
+                <img src="\Airbnb\images\menu_black.svg" class="menu" alt="Menu">
+                <img src="\Airbnb\images\account_black.svg" class="profile" alt="Profile">
               </button>
             </li>
           </ul>
@@ -96,7 +96,7 @@
               style="color: black; border-top-right-radius: 40px;border-bottom-right-radius: 40px;">Guests
               <p style="color: rgb(131, 127, 122); font-size: 13px; font-weight: 500">Add Guests
                 <button type="button" class="pagination-button">
-                  <img src="\images\search_white.svg" class="search-button" alt="Search">
+                  <img src="\Airbnb\images\search_white.svg" class="search-button" alt="Search">
                 </button>
               </p>
             </a>
@@ -148,7 +148,7 @@
             <div class="row image">
               <div class="col col-md-3">
                 <div class="card">
-                  <img src="\images\lonavla.jpg" class="card-img" alt="lonavla">
+                  <img src="\Airbnb\images\lonavla.jpg" class="card-img" alt="lonavla">
                   <div class="first-image">
                     <h2 class="img-title">Lonavla</h2>
                     <p class="img-subtitle">66 Kilomiters away</p>
@@ -157,7 +157,7 @@
               </div>
               <div class="col col-md-3">
                 <div class="card">
-                  <img src="\images\Alibagh.jpg" class="card-img" alt="Alibagh">
+                  <img src="\Airbnb\images\Alibagh.jpg" class="card-img" alt="Alibagh">
                   <div class="second-image">
                     <h2 class="img-title">Alibagh</h2>
                     <p class="img-subtitle">37 Kilomiters away</p>
@@ -166,7 +166,7 @@
               </div>
               <div class="col col-md-3">
                 <div class="card">
-                  <img src="\images\Karjat.jpg" class="card-img" alt="Karjat">
+                  <img src="\Airbnb\images\Karjat.jpg" class="card-img" alt="Karjat">
                   <div class="third-image">
                     <h2 class="img-title">Karjat</h2>
                     <p class="img-subtitle">53 Kilomiters away</p>
@@ -175,7 +175,7 @@
               </div>
               <div class="col col-md-3">
                 <div class="card">
-                  <img src="\images\calangute.jpg" class="card-img" alt="calangute">
+                  <img src="\Airbnb\images\calangute.jpg" class="card-img" alt="calangute">
                   <div class="forth-image">
                     <h2 class="img-title">Calangute</h2>
                     <p class="img-subtitle">396 Kilomiters away</p>
@@ -188,7 +188,7 @@
             <div class="row image">
               <div class="col col-md-3">
                 <div class="card">
-                  <img src="\images\Karjat.jpg" class="card-img" alt="lgatpuri">
+                  <img src="\Airbnb\images\Karjat.jpg" class="card-img" alt="lgatpuri">
                   <div class="first-image">
                     <h2 class="img-title">lgatpuri</h2>
                     <p class="img-subtitle">66 Kilomiters away</p>
@@ -197,7 +197,7 @@
               </div>
               <div class="col col-md-3">
                 <div class="card">
-                  <img src="\images\calangute.jpg" class="card-img" alt="Alibagh">
+                  <img src="\Airbnb\images\calangute.jpg" class="card-img" alt="Alibagh">
                   <div class="second-image">
                     <h2 class="img-title">Alibagh</h2>
                     <p class="img-subtitle">37 Kilomiters away</p>
@@ -206,7 +206,7 @@
               </div>
               <div class="col col-md-3">
                 <div class="card">
-                  <img src="\images\lonavla.jpg" class="card-img" alt="panchgini">
+                  <img src="\Airbnb\images\lonavla.jpg" class="card-img" alt="panchgini">
                   <div class="third-image">
                     <h2 class="img-title">Panchgini</h2>
                     <p class="img-subtitle">53 Kilomiters away</p>
@@ -215,7 +215,7 @@
               </div>
               <div class="col col-md-3">
                 <div class="card">
-                  <img src="\images\Alibagh.jpg" class="card-img" alt="matheran">
+                  <img src="\Airbnb\images\Alibagh.jpg" class="card-img" alt="matheran">
                   <div class="forth-image">
                     <h2 class="img-title">Matheran</h2>
                     <p class="img-subtitle">396 Kilomiters away</p>
@@ -248,7 +248,7 @@
       </div>
       <div class="row">
         <div class="col col-6">
-          <img src="\images\trip.jpg" class="col-6-img" alt="Things_to_do_on_your_trip">
+          <img src="\Airbnb\images\trip.jpg" class="col-6-img" alt="Things_to_do_on_your_trip">
           <div class="col-6-img-text1">
             Things to do<br>on your trip
             <pre>
@@ -257,7 +257,7 @@
           </div>
         </div>
         <div class="col col-6">
-          <img src="\images\home.jpg" class="col-6-img" alt="Things_to_do_from_home">
+          <img src="\Airbnb\images\home.jpg" class="col-6-img" alt="Things_to_do_from_home">
           <div class="col-6-img-text2">
             Things to do<br>from home
             <pre>
@@ -274,7 +274,7 @@
 
   <div class="continer">
     <figure>
-      <img src="\images\question_about_hosting.jpg" class="full-image" alt="Hosting" style="width:85.7%">
+      <img src="\Airbnb\images\question_about_hosting.jpg" class="full-image" alt="Hosting" style="width:85.7%">
     </figure>
         <!-- <div class="full-image-text">
           Questions<br>about<br>hosting?
