change path of all images

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
   <!--Center Picture-->
 <div class="center-image">
-    <img src="\images\1st_image.jpg" class="image" alt="background image" style="width: 85.5%;">
+    <img src="\Airbnb\images\1st_image.jpg" class="image" alt="background image" style="width: 85.5%;">
     <div class="inside-img-text">
       Let your curiosity do the booking
       <pre>
